fixed lexiconNavbar Frame on mobiles  by removing padding in lexiconNavbar section

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
 }
 
 .lexiconNavbar {
-  padding: 0.75rem 0 0;
+  padding: 0;
 }
 
 .lexiconNavbarContent {
